fix button spacing

--- a/src/modules/header/styles.css
+++ b/src/modules/header/styles.css
@@ -399,15 +399,23 @@
   min-width: 172px;
   height: 68px;
   padding: .5rem;
-  margin: 1rem 0;
   background: #b75400;
   border-radius: 2px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
 }
 
+.member-menu-item:first-child {
+  margin-top: 1rem;
+}
+
+.member-menu-item:nth-child(2) {
+  margin-top: .75rem;
+}
+
 .member-menu-text {
   position: absolute;
   top: 50%;
+  width: 100%;
   transform: translate(-50%, -50%);
 }
 
